Chapter_Four/Lecture_6_Lab/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zoneprinter
  labels:
    app: zoneprinter
spec:
  type: NodePort
  selector:
    app: zoneprinter
  ports:
  - name: http
    port: 80
    nodePort: 30061
