Chapter_Four/Lecture_6_Lab/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: zoneprinter
  annotations:
    kubernetes.io/ingress.class: gce-multi-cluster
    kubernetes.io/ingress.global-static-ip-name: kubemci-ip
spec:
  backend:
    serviceName: zoneprinter
    servicePort: 80
